# IntegrationTestFramework

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake_clang.yml  cmake_ubuntu.yml  cmake_windows.yml
Delegate/: MulticastDelegate.h
DelegateMQ/: Common.cmake  DelegateMQ.cmake  DelegateMQ.h  External.cmake  Macros.cmake  Port.cmake
DelegateMQ/delegate/: DelegateMQConfig_Default.h  DelegateOpt.h  IDispatcher.h
DelegateMQ/extras/allocator/: Allocator.cpp  Allocator.h  xallocator.cpp  xallocator.h  xmake_shared.h
DelegateMQ/extras/databus/: DataBus.h  DeadlineSubscription.h  Participant.h  SpyPacket.h
DelegateMQ/extras/dispatcher/: Dispatcher.h  RemoteChannel.h
DelegateMQ/extras/util/: NetworkEngine.cpp  NetworkEngine.h  RetryMonitor.h  ThreadMonitor.cpp  ThreadMonitor.h  ThreadMonitorSer.h  TimerDelegate.h  TransportMonitor.h
DelegateMQ/port/fault/: Fault.cpp
DelegateMQ/port/os/cmsis-rtos2/: Thread.cpp
DelegateMQ/port/os/freertos/: FreeRTOSClock.h  FreeRTOSConditionVariable.h  Thread.cpp
DelegateMQ/port/os/qt/: Thread.cpp
DelegateMQ/port/os/stdlib/: Thread.cpp
DelegateMQ/port/os/threadx/: Thread.cpp
DelegateMQ/port/os/win32/: Thread.cpp
DelegateMQ/port/os/zephyr/: Thread.cpp
DelegateMQ/port/serialize/serialize/: msg_serialize.h
DelegateMQ/port/transport/: ITransportMonitor.h
DelegateMQ/port/transport/arm-lwip-netconn-udp/: ArmLwipNetconnUdpTransport.h
DelegateMQ/port/transport/arm-lwip-udp/: ArmLwipUdpTransport.h
DelegateMQ/port/transport/linux-tcp/: LinuxTcpTransport.h
DelegateMQ/port/transport/linux-udp/: LinuxUdpTransport.h
DelegateMQ/port/transport/mqtt/: MqttTransport.h
DelegateMQ/port/transport/nng/: NngTransport.h
DelegateMQ/port/transport/serial/: SerialTransport.h
DelegateMQ/port/transport/stm32-uart/: Stm32UartTransport.h
DelegateMQ/port/transport/win32-pipe/: Win32PipeTransport.h
DelegateMQ/port/transport/win32-tcp/: Win32TcpTransport.h
DelegateMQ/port/transport/win32-udp/: Win32UdpTransport.h
DelegateMQ/port/transport/zephyr-udp/: ZephyrUdpTransport.h
DelegateMQ/port/transport/zeromq/: ZeroMqTransport.h
DelegateMQ/predef/dispatcher/: Dispatcher.h
DelegateMQ/predef/transport/: ITransport.h
DelegateMQ/predef/transport/win32-pipe/: Win32PipeTransport.h
DelegateMQ/predef/transport/win32-udp/: Win32UdpTransport.h
DelegateMQ/predef/transport/zeromq/: ZeroMqTransport.h
IntegrationTest/: CMakeLists.txt  IT_Client.h  IT_Common.h  IT_Util.h  IntegrationTest.cpp  IntegrationTest.cpp.bak  IntegrationTest.h  RemoteIds.h  ResultMsg.h  Signal.h  SignalThread.h  StartMsg.h  StatusMsg.h  TestServer.cpp  TestServer.h
Logger/it/: Logger_IT.cpp
Logger/src/: LogData.cpp  LogData.h  Logger.cpp  Logger.h
Port/src/: IT_Client.h  Timer.cpp  Timer.h  WorkerThreadStd.cpp  WorkerThreadStd.h
